# ActiveSpBdryLearn

./: CMakeLists.txt  Dataset.cpp  Dataset.h  Interactive_learn_main.cpp  README.md
Classifier/: CMakeLists.txt  edgeclassifier.h  opencvRFclassifier.cpp  opencvRFclassifier.h  opencvRFclassifierP.cpp  opencvRFclassifierP.cpp~  opencvRFclassifierP.h  opencvRFclassifierP.h~  vigraRFclassifier.cpp  vigraRFclassifier.cpp~  vigraRFclassifier.h  vigraRFclassifier.h~  vigraRFclassifierP.cpp  vigraRFclassifierP.cpp~  vigraRFclassifierP.h  vigraRFclassifierP.h~
IterativeLearners/: CMakeLists.txt  IterativeLearn.cpp  IterativeLearn.h  IterativeLearn.h~  IterativeLearn_cotrain.cpp  IterativeLearn_cotrain.h  IterativeLearn_random.h  IterativeLearn_semi.cpp~  IterativeLearn_semi.h  IterativeLearn_semi.h~  IterativeLearn_unc.cpp  IterativeLearn_unc.h
SemiSupervised/: CMakeLists.txt  kmeans.cpp  kmeans.h  rowval.h  weightmatrix_iter.cpp  weightmatrix_iter.h
